Added new branch with testserver setup to install apache. Requires a remote user 'ansible' with passwordless sudo rights

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -12,7 +12,8 @@ remote_port    		= 22
 nocows 	       		= 1
 sudo_exe       		= sudo
 timeout        		= 30
-remote_user    		= root
+remote_user    		= ansible
+become              = yes
 ansible_managed 	= ansible managed: {file} modified on %Y-%m-%d %H:%M:%S on {host}
 action_plugins  	= /usr/share/ansible_plugins/action_plugins
 callback_plugins 	= /usr/share/ansible_plugins/callback_plugins
